Bug 354954 - Shortcut Ctrl-Shift-S defined twice by default
Summary: Shortcut Ctrl-Shift-S defined twice by default
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: 16.08.3
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-11-06 15:05 UTC by Achim Bohnet
Modified: 2016-11-07 19:23 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot of configure shortcut dialog with duplicate shortcut (26.09 KB, image/png)
2015-11-06 15:06 UTC, Achim Bohnet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Achim Bohnet 2015-11-06 15:05:27 UTC
Summary says it all. See screenshot

Reproducible: Always

Steps to Reproduce:
1.  Split view in konsole ctrl+shift+(
2.  TRy to close  one with Ctrl-Shift-S

Actual Results:  
Dialog pop up:

The key sequence 'Ctrl+Shift+S' is ambiguous. Use 'Configure Shortcuts'
from the 'Settings' menu to solve the ambiguity.
No action will be triggered.

Expected Results:  
Close Active shoud not collide with the standard shortcut for ctrl-shift-S (save-as)
Comment 1 Achim Bohnet 2015-11-06 15:06:51 UTC
Created attachment 95358 [details]
screenshot of configure shortcut dialog with duplicate shortcut
Comment 2 Achim Bohnet 2016-09-24 21:43:35 UTC
I'll suggest to use Ctrl+Shift+X as default for 'Close Active'.   This is not used.
Comment 3 David Faure 2016-11-01 10:08:07 UTC
The shortcut is defined here:
src/ViewManager.cpp:158:        collection->setDefaultShortcut(closeActiveAction, Qt::CTRL + Qt::SHIFT + Qt::Key_S);

Probably the two views conflict, each one having such an action.
The usual solution is to set the shortcut context of the actions, something like action->setShortcutContext(Qt::WidgetShortcut);
Comment 4 David Faure 2016-11-01 10:18:14 UTC
OK never mind my comment (apart from the grep result ;).

Achim is right, the conflict is probably with "Save As".
Some actions already have a shortcut context.
Otherwise Ctrl+Shift+O would conflict after splitting too, and it doesn't, so that's not it.
Comment 5 Kurt Hindenburg 2016-11-07 19:23:34 UTC
Git commit f2358180683f96b1c47e1a441f45c88460fc23b5 by Kurt Hindenburg.
Committed on 07/11/2016 at 19:21.
Pushed by hindenburg into branch 'master'.

Change close activate view to Ctrl+Shift+X to avoid duplicate

The key sequence 'Ctrl+Shift+S' is ambiguous. Use 'Configure Shortcuts'
from the 'Settings' menu to solve the ambiguity. This shortcut was used
repeated times.

Now its changed to CTRL+SHIFT+X. For closing active tab in the konsole
of the split screen, it uses CTRL+SHIFT+X

Thanks to Aniketh Girish anikethgireesh gmail com

REVIEW: 129305

M  +1    -1    src/ViewManager.cpp

http://commits.kde.org/konsole/f2358180683f96b1c47e1a441f45c88460fc23b5