Change close activate view to Ctrl+Shift+X to avoid duplicate

The key sequence 'Ctrl+Shift+S' is ambiguous. Use 'Configure Shortcuts'
from the 'Settings' menu to solve the ambiguity. This shortcut was used
repeated times.

Now its changed to CTRL+SHIFT+X. For closing active tab in the konsole
of the split screen, it uses CTRL+SHIFT+X

Thanks to Aniketh Girish anikethgireesh gmail com

REVIEW: 129305
BUG: 354954